# jupyternb-setup

./: README.md  pyproject.toml  requirements.txt  setup.py
jupyternb/: __init__.py  jupyter_startup.py
