[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyternb-setup"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "Fabric Jupyter Notebook Container Setup"
dynamic = ["version"]

keywords = ["Fabric Jupyter Notebook Container Setup", "Jupyter Hub", "Jupyter Notebook"]

scripts = {"fabric-jupyter-startup" = "jupyternb.jupyter_startup:Main.run"}

requires-python = '>=3.9'
dependencies = ["nbgitpuller",
                "fabric_fss_utils",
                "atomicwrites",
                "gitpython",
                "wget"]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/jupyternb-setup"

[tool.flit.module]
name = "jupyternb"